@@ -7,6 +7,9 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ADDED: cycle-check in bagof/setof code handling existential bindings
+    (should be an error!?).
+
   * ADDED: Support for cyclic terms in the recorded term representation,
     providing cyclic-safe recorda/3, findall/3, bagof/3, setof/3, exceptions
     and Prolog terms in XPCE objects.
